@@ -1,3 +1,9 @@
+2019-06-01  Niels Möller  <nisse@lysator.liu.se>
+
+	* cmac.h (struct cmac128_key): New struct.
+	* cmac.h (struct cmac128_ctx): Use struct cmac128_key.
+	* cmac.c (cmac128_set_key, cmac128_digest): Update accordingly.
+
 2019-05-12  Niels Möller  <nisse@lysator.liu.se>
 
 	Delete old libdes/openssl compatibility interface.
